# apictl

./: .apictl.yaml  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  test.yaml
examples/: contexts.yaml  requests.yaml
src/: applicator.rs  auth.rs  config.rs  context.rs  lib.rs  output.rs  request.rs  response.rs  results.rs  test.rs
