[package]
name = "apictl"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Marsh <joshua.marshian@gmail.com>"]
repository = "https://github.com/icub3d/apictl"
description = "Interact with APIs via the command-line."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
walkdir = "2.3.3"
